added little classloader code for testing purposes